# Agent-Armor

./: .agent-armor.toml  .gitignore  .kvlr.toml  AUTHORS  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  THREAT_MODEL.md  badge_server.py  codecov.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
.kvlr/: pypi-cache.json  shadow-chain.json
agent-armor/: .gitignore  BUILDING.md  Cargo.toml  README.md
agent-armor/src/: lib.rs  main.rs  report.rs
agent-armor/src/engine/: armor.rs  ast_hardener.rs  attestation.rs  dtg.rs  mcp_proxy.rs  mod.rs  policy.rs  report_builder.rs  secret_scrubber.rs  slopsquatting.rs
agent_armor/: __init__.py  pipeline.py
agent_armor/core/: __init__.py  ast_hardener.py  attestation.py  dtg_engine.py  policy_engine.py  secret_scrubber.py
agent_armor/guards/: __init__.py  slopsquatting_guard.py
agent_armor/mcp_proxy/: __init__.py  interceptor.py
agent_armor/shadow_chain/: __init__.py  chain_manager.py
cli/: __init__.py  armor.py
examples/: demo.py  quickstart.py
tests/: __init__.py  conftest.py  test_ast_hardener.py  test_attestation.py  test_dtg_engine.py  test_mcp_proxy.py  test_pipeline.py  test_policy_engine.py  test_secret_scrubber.py  test_shadow_chain.py  test_slopsquatting.py
vulnerability_museum/: README.md
vulnerability_museum/01_sql_injection/: hardened.py  vulnerable.py
vulnerability_museum/02_eval_injection/: hardened.py  vulnerable.py
vulnerability_museum/03_secret_exposure/: hardened.py  vulnerable.py
vulnerability_museum/04_command_injection/: hardened.py  vulnerable.py
vulnerability_museum/05_dependency_confusion/: hardened.py  vulnerable.py
vulnerability_museum/06_missing_auth/: hardened.py  vulnerable.py
vulnerability_museum/07_jwt_algorithm_none/: hardened.py  vulnerable.py
vulnerability_museum/08_delete_without_user_id/: hardened.py  vulnerable.py
vulnerability_museum/09_insecure_crypto/: hardened.py  vulnerable.py
vulnerability_museum/10_ssrf/: hardened.py  vulnerable.py
