[package]
name = "agent-armor"
version = "0.1.0"
edition = "2021"
description = "Zero-Trust Middleware for Agentic Coding — intercepts, hardens, and cryptographically attests AI-generated code"
authors = ["AgentArmor Contributors"]
license = "MIT"
repository = "https://github.com/yourusername/agent-armor"
readme = "README.md"
keywords = ["security", "ai", "code-analysis", "ast", "attestation"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "agent-armor"
path = "src/main.rs"

[lib]
name = "agent_armor"
path = "src/lib.rs"

[dependencies]
# AST Parsing — tree-sitter 0.20 uses the stable extern-C grammar API
tree-sitter            = "0.20"
tree-sitter-python     = "0.20"
tree-sitter-javascript = "0.20"

# Cryptography — Attestation Shadow-Chain
sha2  = "0.10"
hex   = "0.4"
hmac  = "0.12"

# CLI — professional developer experience
clap = { version = "4", features = ["derive", "color", "env"] }

# Serialization — JSON/TOML reports
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
toml       = "0.8"

# HTTP — Slopsquatting / registry validator (blocking = no async boilerplate)
reqwest = { version = "0.11", features = ["json", "blocking"] }

# Utilities
regex     = "1.10"
colored   = "2"
anyhow    = "1"
thiserror = "1"
chrono    = { version = "0.4", features = ["serde"] }
walkdir   = "2"
indicatif = "0.17"

[dev-dependencies]
tempfile = "3"
